--- a/Camelonta.ActivityLog/App_Plugins/Camelonta.ActivityLog/activitylog.css
+++ b/Camelonta.ActivityLog/App_Plugins/Camelonta.ActivityLog/activitylog.css
@@ -34,10 +34,10 @@
 }
 
 .cam-activitylog .profile-image {
-    width: 15px;
+    height: 19px;
     border-radius: 50%;
     position: relative;
-    top: -2px;
+    top: -1px;
 }
 
 .cam-logItem strong,
